--- a/src/app/design/adminhtml/default/default/template/zendesk/dashboard/index.phtml
+++ b/src/app/design/adminhtml/default/default/template/zendesk/dashboard/index.phtml
@@ -15,124 +15,127 @@
  * limitations under the License.
  */
 ?>
-<?php if(!$this->getIsZendeskDashboard() && Mage::getStoreConfig('zendesk/backend_features/show_on_dashboard')): ?>
-<?php $totals = Mage::helper("zendesk")->getTicketTotals(); ?>
-<?php if($totals): ?>
-<div class="box" id="dashboard_diagram_ticket_totals">
-    <div class="entry-edit">
-        <p class="switcher a-right" style="padding:5px 10px;">
-            <span style="float: left;"><?php echo $this->__('Ticket Statistics') ?></span>
-            <?php echo $this->__('From') ?>:&nbsp;<input type="text" name="ticket_from" id="ticket_from" value="" class="input-text input-text-range-date">
-            <img src="<?php echo Mage::getDesign()->getSkinUrl('images/grid-cal.gif') ?>" alt="Select Date" class="v-middle" title="Select Date" id="ticket_from_trig">
-            <?php echo $this->__('To') ?>:&nbsp;<input type="text" name="ticket_to" id="ticket_to" value="" class="input-text input-text-range-date">
-            <img src="<?php echo Mage::getDesign()->getSkinUrl('images/grid-cal.gif') ?>" alt="Select Date" class="v-middle" title="Select Date" id="ticket_to_trig">
-            &nbsp;<button style="" onclick="checkStatistics();" class="scalable" type="button" id="statistics">
-                <span><?php echo $this->__('Search') ?></span>
-            </button>
-            <br>
-        </p>
-        <table cellspacing="0" width="100%">
-            <tbody><tr>
-                <td class="a-center bold">
-                    <span><?php echo $this->__('Open') ?></span><br>
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-open"><?php echo $totals['open']; ?></span>
-                </td>
-                            <td class="a-center bold">
-                    <span><?php echo $this->__('New') ?></span><br>
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-new"><?php echo $totals['new']; ?></span>
-                </td>
-                            <td class="a-center bold">
-                    <span><?php echo $this->__('Solved') ?></span><br>
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-solved"><?php echo $totals['solved']; ?></span>
-                </td>
-                <td class="a-center bold">
-                    <span><?php echo $this->__('Closed') ?></span><br>
-                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-closed"><?php echo $totals['closed']; ?></span>
-                </td>
-                        </tr>
-        </tbody></table>
-    </div>
-</div>
-<script type="text/javascript">// <![CDATA[
-Calendar.setup({
-    inputField : 'ticket_from',
-    ifFormat : '%m/%e/%y',
-    button : 'ticket_from_trig',
-    align : 'Bl',
-    singleClick : true
-});
+<?php if( $this->isConnected() ): ?>
+    <?php if (!$this->getIsZendeskDashboard() && Mage::getStoreConfig('zendesk/backend_features/show_on_dashboard')): ?>
+        <?php $totals = $this->getTotals(); ?>
+        <?php if ($totals): ?>
+            <div class="box" id="dashboard_diagram_ticket_totals">
+                <div class="entry-edit">
+                    <p class="switcher a-right" style="padding:5px 10px;">
+                        <span style="float: left;"><?php echo $this->__('Ticket Statistics') ?></span>
+                        <?php echo $this->__('From') ?>:&nbsp;<input type="text" name="ticket_from" id="ticket_from" value="" class="input-text input-text-range-date">
+                        <img src="<?php echo Mage::getDesign()->getSkinUrl('images/grid-cal.gif') ?>" alt="Select Date" class="v-middle" title="Select Date" id="ticket_from_trig">
+                        <?php echo $this->__('To') ?>:&nbsp;<input type="text" name="ticket_to" id="ticket_to" value="" class="input-text input-text-range-date">
+                        <img src="<?php echo Mage::getDesign()->getSkinUrl('images/grid-cal.gif') ?>" alt="Select Date" class="v-middle" title="Select Date" id="ticket_to_trig">
+                        &nbsp;<button style="" onclick="checkStatistics();" class="scalable" type="button" id="statistics">
+                            <span><?php echo $this->__('Search') ?></span>
+                        </button>
+                        <br>
+                    </p>
+                    <table cellspacing="0" width="100%">
+                        <tbody><tr>
+                                <td class="a-center bold">
+                                    <span><?php echo $this->__('Open') ?></span><br>
+                                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-open"><?php echo $totals['open']; ?></span>
+                                </td>
+                                <td class="a-center bold">
+                                    <span><?php echo $this->__('New') ?></span><br>
+                                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-new"><?php echo $totals['new']; ?></span>
+                                </td>
+                                <td class="a-center bold">
+                                    <span><?php echo $this->__('Solved') ?></span><br>
+                                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-solved"><?php echo $totals['solved']; ?></span>
+                                </td>
+                                <td class="a-center bold">
+                                    <span><?php echo $this->__('Closed') ?></span><br>
+                                    <span class="nowrap" style="font-size:18px; color:#EA7601;" id="tickets-closed"><?php echo $totals['closed']; ?></span>
+                                </td>
+                            </tr>
+                        </tbody></table>
+                </div>
+            </div>
+            <script type="text/javascript">// <![CDATA[
+                Calendar.setup({
+                    inputField: 'ticket_from',
+                    ifFormat: '%m/%e/%y',
+                    button: 'ticket_from_trig',
+                    align: 'Bl',
+                    singleClick: true
+                });
 
-Calendar.setup({
-    inputField : 'ticket_to',
-    ifFormat : '%m/%e/%y',
-    button : 'ticket_to_trig',
-    align : 'Bl',
-    singleClick : true
-});
-function setTotalValues(values) {
-    document.getElementById('tickets-open').innerHTML = values.open;
-    document.getElementById('tickets-new').innerHTML = values.new;
-    document.getElementById('tickets-closed').innerHTML = values.closed;
-    document.getElementById('tickets-solved').innerHTML = values.solved;
-}
-function checkStatistics() {
-    url = '<?php echo Mage::helper("adminhtml")->getUrl('/zendesk/gettotals/') ?>';
-        new Ajax.Request(url, {
-            method: 'get',
-            parameters: {from: document.getElementById('ticket_from').value, to: document.getElementById('ticket_to').value},
-            requestHeaders: {
-                Authorization: '<?php echo $this->getAuthHeader(); ?>'
-            },
-            onSuccess: function(transport) {
-                if (transport.responseJSON.success === true) {
-                    setTotalValues(transport.responseJSON.totals);
-                } else {
-                    var totals = new Object();
-                    totals.open = "0";
-                    totals.new = "0";
-                    totals.closed = "0";
-                    totals.solved = "0";
-                    setTotalValues(totals);
+                Calendar.setup({
+                    inputField: 'ticket_to',
+                    ifFormat: '%m/%e/%y',
+                    button: 'ticket_to_trig',
+                    align: 'Bl',
+                    singleClick: true
+                });
+                function setTotalValues(values) {
+                    document.getElementById('tickets-open').innerHTML = values.open;
+                    document.getElementById('tickets-new').innerHTML = values.new;
+                    document.getElementById('tickets-closed').innerHTML = values.closed;
+                    document.getElementById('tickets-solved').innerHTML = values.solved;
                 }
-            },
-            onFailure: function() {
-                var totals = new Object();
-                totals.open = "0";
-                totals.new = "0";
-                totals.closed = "0";
-                totals.solved = "0";
-                setTotalValues(totals);
-            }
-        });
-    }
-// ]]>
-</script>
-<?php endif; ?>
-<?php endif; ?>
-<?php if($this->getIsZendeskDashboard() || Mage::getStoreConfig('zendesk/backend_features/show_on_dashboard')): ?>
-    <?php if($this->getIsZendeskDashboard()): ?>
-        <div class="content-header">
-            <table cellspacing="0">
-                <tr>
-                    <td><h3 class="head-dashboard"><?php echo $this->__('Dashboard') ?></h3></td>
-                </tr>
-            </table>
-        </div>
+                function checkStatistics() {
+                    url = '<?php echo Mage::helper("adminhtml")->getUrl('/zendesk/gettotals/') ?>';
+                    new Ajax.Request(url, {
+                        method: 'get',
+                        parameters: {from: document.getElementById('ticket_from').value, to: document.getElementById('ticket_to').value},
+                        requestHeaders: {
+                            Authorization: '<?php echo $this->getAuthHeader(); ?>'
+                        },
+                        onSuccess: function (transport) {
+                            if (transport.responseJSON.success === true) {
+                                setTotalValues(transport.responseJSON.totals);
+                            } else {
+                                var totals = new Object();
+                                totals.open = "0";
+                                totals.new = "0";
+                                totals.closed = "0";
+                                totals.solved = "0";
+                                setTotalValues(totals);
+                            }
+                        },
+                        onFailure: function () {
+                            var totals = new Object();
+                            totals.open = "0";
+                            totals.new = "0";
+                            totals.closed = "0";
+                            totals.solved = "0";
+                            setTotalValues(totals);
+                        }
+                    });
+                }
+            // ]]>
+            </script>
+        <?php endif; ?>
     <?php endif; ?>
-    <div class="zendesk_dashboard_container">
-        <?php echo $this->getChildHtml('zendesk_dashboard_grids') ?>
-        <div id="tickets_grid_tab_content"></div>
 
-        <?php if(!$this->getIsZendeskDashboard()): ?>
-            <div class="a-right" style="margin: 6px 0;">
-                <button style="" onclick="setLocation('<?php echo $this->getUrl('adminhtml/zendesk/create'); ?>');" class="scalable" type="button" id="zendesk-create-ticket">
-                    <span><?php echo $this->__('New Support Ticket'); ?></span>
-                </button>
-                <button style="" onclick="setLocation('<?php echo Mage::helper('zendesk')->getUrl(); ?>');" class="scalable" type="button" id="zendesk-view-all">
-                    <span><?php echo $this->__('View All Tickets'); ?></span>
-                </button>
+    <?php if ($this->getIsZendeskDashboard() || Mage::getStoreConfig('zendesk/backend_features/show_on_dashboard')): ?>
+        <?php if ($this->getIsZendeskDashboard()): ?>
+            <div class="content-header">
+                <table cellspacing="0">
+                    <tr>
+                        <td><h3 class="head-dashboard"><?php echo $this->__('Dashboard') ?></h3></td>
+                    </tr>
+                </table>
             </div>
         <?php endif; ?>
-    </div>
-    <?php echo $this->getChildHtml('zendesk_dashboard_empty'); ?>
-<?php endif; ?>
+        <div class="zendesk_dashboard_container">
+            <?php echo $this->getChildHtml('zendesk_dashboard_grids') ?>
+            <div id="tickets_grid_tab_content"></div>
+
+            <?php if (!$this->getIsZendeskDashboard()): ?>
+                <div class="a-right" style="margin: 6px 0;">
+                    <button style="" onclick="setLocation('<?php echo $this->getUrl('adminhtml/zendesk/create'); ?>');" class="scalable" type="button" id="zendesk-create-ticket">
+                        <span><?php echo $this->__('New Support Ticket'); ?></span>
+                    </button>
+                    <button style="" onclick="setLocation('<?php echo Mage::helper('zendesk')->getUrl(); ?>');" class="scalable" type="button" id="zendesk-view-all">
+                        <span><?php echo $this->__('View All Tickets'); ?></span>
+                    </button>
+                </div>
+            <?php endif; ?>
+        </div>
+        <?php echo $this->getChildHtml('zendesk_dashboard_empty'); ?>
+    <?php endif; ?>
+<?php endif ?>
