--- a/src/app/design/adminhtml/default/default/layout/zendesk.xml
+++ b/src/app/design/adminhtml/default/default/layout/zendesk.xml
@@ -71,28 +71,6 @@
 
         </reference>
     </adminhtml_zendesk_index>
-    <adminhtml_zendesk_settings>
-        <reference name="head">
-            <action method="setTitle">
-                <title><![CDATA[Edit Settings / Zendesk / Magento Admin]]></title>
-            </action>
-            <action method="addItem">
-                <type>skin_js</type>
-                <script>zendesk/js/jquery-1.11.1.min.js</script>
-            </action>
-            <action method="addItem">
-                <type>skin_js</type>
-                <script>zendesk/js/jquery-noconflict.min.js</script>
-            </action>
-            <action method="addItem">
-                <type>skin_js</type>
-                <script>zendesk/js/validation.js</script>
-            </action>
-        </reference>
-        <reference name="content">
-            <block type="zendesk/adminhtml_settings_edit" name="zendesk_settings_edit" />
-        </reference>
-    </adminhtml_zendesk_settings>
     <adminhtml_zendesk_create_load_block_order_grid>
         <reference name="root">
             <block type="core/text_list" name="content" >
@@ -145,4 +123,16 @@
             <block type="zendesk/adminhtml_log" name="zendesk_log" />
         </reference>
     </adminhtml_zendesk_log>
+    <adminhtml_oauth_authorize_index>
+        <reference name="oauth.authorize.form">
+            <action method="setTemplate">
+                <template>zendesk/oauth/authorize/form/login.phtml</template>
+            </action>
+        </reference>
+        <reference name="oauth.authorize.button">
+            <action method="setTemplate">
+                <template>zendesk/oauth/authorize/button.phtml</template>
+            </action>
+        </reference>
+    </adminhtml_oauth_authorize_index>
 </layout>
