--- a/src/skin/adminhtml/default/default/zendesk/zendesk.css
+++ b/src/skin/adminhtml/default/default/zendesk/zendesk.css
@@ -73,34 +73,15 @@ button.zendesk span {
 .grid tr.filter .range input {
     min-width: 61px !important;
 }
-.statistics-title {
-    float: left; 
-    font-weight: bold;
-}
-.statistics-entry {
-    font-size:18px; 
-    color:#EA7601;
-}
-#dashboard_diagram_ticket_totals table td {
-    width: 16.6%;
-}
-#dashboard_left_diagram_ticket_totals tr:nth-child(even) td{
-    padding-bottom: 20px;
-}
-#dashboard_left_diagram_ticket_totals tr:first-child td{
-    padding-top: 20px;
-}
-#dashboard_left_diagram_ticket_totals ul.tabs {
-    color: #000; 
-    border-top: none;
-}
-#dashboard_left_diagram_ticket_totals ul.tabs li:hover{
-    background-color: #D8E6E6;
-    background-image: url(images/tabs_link_over_bg.gif);
-}
 div.entry-edit-head .fright {
     float: right;
 }
+#tickets_grid_tab_content tbody .zendesk-grid-tr:hover,
+#zendesk_create_customer_search_grid_table tbody tr:hover,
+#zendesk_create_order_search_grid_table tbody tr:hover, 
 #zendesk_tab_tickets_grid_all_table .zendesk-grid-tr:hover {
     background: #fcf5dd;
-} 
+}
+#zendesk_create_order_search_grid_table tr.filter .range .range-line {
+    min-width: 124px;
+}
